* Sep 23 2001 hship

framework, contrib, tutorial:
- Provide initial build.xml (Ant build files)

* Sep 21 2001 hship

framework:
- Use SetVariable() method to setup the inspector movie URL variable
  rather than sue the query parameter option (which conflicts
  with real query parameters used for dynamically downloaded
  private assets).  This is broken in Navigator 6, however.

tutorial:
- Turn off static export of private assets, to allow for
  testing.
  
[ #463198 ] inspector movie url error

* Sep 21 2001 hship

Add a test of the RedirectException to the tutorial.

[ #463539 ] Cookie sniffer fails in RequestContext
[ #463393 ] Shelll's stylesheet localized w/Tomcat

* Sep 13 2001 hship

framework:
- Fix error in ShowInspector.script (to set height and width of Inspector window)
- Make the Inspector Icon initially invisible (works in NN4, IE5, but not NN6)
- Allow for redirections outside of Tapestry

vlib:
- Add a visible break after the Browser

[ #461281 ] Redirect out of Tapestry

* Sep 12 2001 hship

framework:
- Reorganize the order in which components are built and bindings set
- Allow attributes from the template to provide bindings for formal parameters

vlib:
- Create a test case for [ #450988 ] on the admin.TransferBooks page.

[ #450988 ] Inherited bindings vs. HTML static

* Sep 11 2001 hship

framework:
- Add IRenderDescription interface, make some key classes implement it
- Change RequestContext to notice and use the IRenderDescription interface when displaying
  classes
- Bump the framework version up to 1.0.6

* Sep 10 2001 hship

doc:
- Fix minor errors in Developer's Guide

framework:
- Fix error in IntegerField.jwc
- Fix some incorrect JavaDoc comments
- Create method ApplicationServlet.doService, which will make it easier
  to analyze performance
  
contrib:
- Fix error in MultiplePropertySelection (was using IPropertySelectionRenderer
  not IMultiplePropertySelectionRenderer).

vlib: