@@ -8,13 +8,13 @@
 <component id="content" type="Block"/>
 
 <component id="weekday" type="Direct">
-  <binding name="listener" property-path="linkListener"/>
+  <binding name="listener" property-path="listeners.selectWeekday"/>
   <binding name="class" property-path="weekdayClass"/>
   <static-binding name="context">0</static-binding>
 </component>
 
 <component id="weekend" type="Direct">
-  <binding name="listener" property-path="linkListener"/>
+  <binding name="listener" property-path="listeners.selectWeekend"/>
   <binding name="class" property-path="weekendClass"/>
   <static-binding name="context">1</static-binding>
 </component>
